fixed #8